# ChunkedDiffusion_LLM

./: README.md  lib_chunked_diffusion_model.py  lib_chunked_diffusion_model_config.py  lib_chunks.py  lib_dtypes.py  lib_get_device.py  lib_load_from_hugging_face.py  main.py  pre_training_step_1_encoding.py  pre_training_step_1a_preparing_encoding_dataset.py  pre_training_step_2_next_word_prediction.py  pyproject.toml  test1.py  test2.py
